fixed dropdown spacing

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ img {
 .desktop-main-menu ul li ul.dropdown {
   width: 180px;
   left: -20px;
-  margin-top: 6px;
+  margin-top: 3px;
   color: #fff;
   background-color: #000;
   position: absolute;
